--- a/docker/web/Dockerfile
+++ b/docker/web/Dockerfile
@@ -1,36 +1,16 @@
-FROM php:7.3-fpm-alpine
+FROM nginx:1.15-alpine
 
-# install the PHP extensions we need
-RUN apk update && \
-    apk add mysql-client \
-            freetype-dev \
-            libjpeg-turbo-dev \
-            libpng-dev \
-            libpq \
-            postgresql-dev \
-            libpng-dev \
-            libzip-dev \
-            unzip \
-            git \
-            imagemagick \
-            htop \
-            wget
+ARG HOST=localhost
+ARG ENV=local
 
-# configure extensions
-RUN docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ --with-png-dir=/usr/include/ && \
-    docker-php-ext-configure opcache --enable-opcache
-
-# php extensions
-RUN docker-php-ext-install gd \
-                           mbstring \
-                           opcache \
-                           pdo \
-                           pdo_mysql \
-                           pdo_pgsql \
-                           mysqli \
-                           zip
+# install the packages we need
+RUN apk add --no-cache gettext
 
 # Copy across any custom php.ini files
-COPY ./infrastructure/configs/php-fpm/ /usr/local/etc/php/conf.d/
+COPY ./infrastructure/configuration/nginx/ /etc/nginx/conf.d/
+
+RUN envsubst '$${HOST}, $${ENV}' < /etc/nginx/conf.d/site.conf.template > /etc/nginx/conf.d/default.conf
+
+CMD ["nginx", "-g", "daemon off;"]
 
 WORKDIR /var/www/web
