--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -3,25 +3,29 @@ version: '3.3'
 services:
 
   web:
-    image: nginx:1.14
+    build:
+      context: ../../
+      dockerfile: ./infrastructure/docker/web/Dockerfile
     environment:
       ENV: LOCAL
       HOST: localhost
+    volumes:
+      - web_code:/var/www/:ro
+      - web_files:/var/www/web/sites/default/files/:ro
     ports:
       - "80:80"
       - "443:443"
     restart: always
-    volumes:
-      - ../nginx/site.conf.template:/etc/nginx/conf.d/site.conf.template
-      - web_code:/var/www/
-    command: /bin/bash -c "envsubst '$${HOST}, $${ENV}' < /etc/nginx/conf.d/site.conf.template > /etc/nginx/conf.d/default.conf && exec nginx -g 'daemon off;' && chown -R www-data:www-data /var/www"
+    depends_on:
+      - php
 
   php:
     build:
       context: ../../
-      dockerfile: ../docker/php-fpm/Dockerfile
+      dockerfile: ./infrastructure/docker/php-fpm/Dockerfile
     volumes:
       - web_code:/var/www/
+      - web_files:/var/www/web/sites/default/files/
     restart: always
 
   db:
@@ -37,4 +41,5 @@ services:
 
 volumes:
   web_code:
+  web_files:
   db_data:
