--- a/docker-compose/docker-compose-dev.yml
+++ b/docker-compose/docker-compose-dev.yml
@@ -2,38 +2,78 @@ version: '3.3'
 
 services:
 
-  web:
-    image: nginx:1.14
-    environment:
-      ENV: LOCAL
-      HOST: localhost
-    ports:
-      - "80:80"
-      - "443:443"
-    restart: always
-    volumes:
-      - ../nginx/backend-site.conf.template:/etc/nginx/conf.d/backend-site.conf.template
-      - ../nginx/entrypoint.sh:/scripts/nginx/entrypoint.sh
-      - ../../backend-code:/var/www/
-    command: /bin/bash -c "envsubst '$${HOST}, $${ENV}' < /etc/nginx/conf.d/backend-site.conf.template > /etc/nginx/conf.d/default.conf && exec nginx -g 'daemon off;' && chown -R www-data:www-data /var/www"
-
-  php:
+  frontend-web:
     build:
-      context: ../
-      dockerfile: ./docker/web/Dockerfile
+      context: ../../
+      dockerfile: ./infrastructure/docker/frontend-web/Dockerfile
+      args:
+        - NGINX_VER=$NGINX_VER
+        - HOST=$HOST
+        - ENV=$ENV
+        - API_HOST=$API_HOST
+    entrypoint:
+      - sh
+      - -c
+      - "gatsby develop -p 5000 -H 0.0.0.0"
+    env_file:
+      - ../../.env
     volumes:
-      - ../../backend-code:/var/www/
+      - ../../frontend-code:/var/www/
+    ports:
+      - "8000:5000"
+    restart: always
+    depends_on:
+     - backend-web
+
+  backend-web:
+    build:
+      context: ../../
+      dockerfile: ./infrastructure/docker/backend-web/Dockerfile
+      args:
+        - NGINX_VER=$NGINX_VER
+        - API_HOST=$API_HOST
+    env_file:
+    - ../../.env
+    volumes:
+    - ../../backend-code:/var/www/:ro
+    - ../../backend-code/web/sites/default/files:/var/www/web/sites/default/files/:ro
+    ports:
+    - "80:80"
+    - "443:443"
+    restart: always
+    depends_on:
+    - backend-php
+    extra_hosts:
+    - "${API_HOST}:127.0.0.1"
+
+  backend-php:
+    build:
+      context: ../../
+      dockerfile: ./infrastructure/docker/backend-php/Dockerfile
+      args:
+      - PHP_VER=$PHP_VER
+    env_file:
+    - ../../.env
+    entrypoint:
+    - sh
+    - -c
+    - "composer -n update -vvv && php-fpm"
+    volumes:
+    - ../../backend-code:/var/www/:ro
+    - ../../backend-code/web/sites/default/files:/var/www/web/sites/default/files/
     restart: always
 
-  db:
-    image: postgres:10
-    environment:
-      POSTGRES_PASSWORD: your_postgres_password
+  backend-db:
+    image: postgres:${POSTGRES_VER}
+    env_file:
+    - ../../.env
     volumes:
-      - db_data:/var/lib/postgresql/data
+    - db_data:/var/lib/postgresql/data
+    ports:
+    - "5432:5432"
     restart: always
 
-  caching:
+  backend-caching:
     image: redis:latest
 
 volumes:
