--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -11,11 +11,15 @@ services:
         - HOST=$HOST
         - ENV=$ENV
         - API_HOST=$API_HOST
+    entrypoint:
+      - sh
+      - -c
+      - "gatsby build && nginx -g 'daemon off;'"
     env_file:
         - ../../.env
     ports:
-      - "80:80"
-      - "443:443"
+      - "8000:80"
+      - "8081:443"
     restart: always
     depends_on:
       - backend-web
@@ -33,8 +37,8 @@ services:
       - web_code:/var/www/:ro
       - web_files:/var/www/web/sites/default/files/:ro
     ports:
-      - "8080:80"
-      - "8081:443"
+      - "80:80"
+      - "443:443"
     restart: always
     depends_on:
       - backend-php
@@ -49,6 +53,10 @@ services:
         - PHP_VER=$PHP_VER
     env_file:
       - ../../.env
+    entrypoint:
+      - sh
+      - -c
+      - "composer -n install -vvv && php-fpm"
     volumes:
       - web_code:/var/www/
       - web_files:/var/www/web/sites/default/files/
