--- a/docker/backend-php/Dockerfile
+++ b/docker/backend-php/Dockerfile
@@ -10,6 +10,7 @@ RUN apk update && \
             libpng-dev \
             libpq \
             postgresql-dev \
+            postgresql-client \
             libpng-dev \
             libzip-dev \
             unzip \
