--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -3,34 +3,22 @@ version: '3.3'
 services:
 
   frontend-web:
-    build:
-      context: ../../
-      dockerfile: ./infrastructure/docker/frontend-web/Dockerfile
-      args:
-        - NGINX_VER=$NGINX_VER
-        - HOST=$HOST
-        - ENV=$ENV
-        - API_HOST=$API_HOST
+    image: registry.gitlab.com/travel-nation/power-stack/frontend/web:v0.0.3
     entrypoint:
       - sh
       - -c
       - "gatsby build && nginx -g 'daemon off;'"
     env_file:
-        - ../../.env
+      - ../../.env
     ports:
       - "8000:80"
-      - "8081:443"
+      - "8001:443"
     restart: always
     depends_on:
       - backend-web
 
   backend-web:
-    build:
-      context: ../../
-      dockerfile: ./infrastructure/docker/backend-web/Dockerfile
-      args:
-        - NGINX_VER=$NGINX_VER
-        - API_HOST=$API_HOST
+    image: registry.gitlab.com/travel-nation/power-stack/backend/web:v0.0.3
     env_file:
       - ../../.env
     volumes:
@@ -46,17 +34,15 @@ services:
       - "${API_HOST}:127.0.0.1"
 
   backend-php:
-    build:
-      context: ../../
-      dockerfile: ./infrastructure/docker/backend-php/Dockerfile
-      args:
-        - PHP_VER=$PHP_VER
+    image: registry.gitlab.com/travel-nation/power-stack/backend/php:v0.0.3
     env_file:
       - ../../.env
     entrypoint:
       - sh
       - -c
       - "composer -n install -vvv && php-fpm"
+    ports:
+      - "9000:9000"
     volumes:
       - web_code:/var/www/
       - web_files:/var/www/web/sites/default/files/
