--- a/docker/backend-web/Dockerfile
+++ b/docker/backend-web/Dockerfile
@@ -11,7 +11,7 @@ RUN apk add --no-cache gettext
 # Copy across any custom php.ini files
 COPY ./infrastructure/configuration/nginx/ /etc/nginx/conf.d/
 
-RUN envsubst '$${HOST},$${API_HOST}, $${ENV}' < /etc/nginx/conf.d/backend-site.conf.template > /etc/nginx/conf.d/default.conf && cat /etc/nginx/conf.d/default.conf
+RUN envsubst '$${HOST},$${API_HOST}, $${ENV}' < /etc/nginx/conf.d/backend-site.conf.template > /etc/nginx/conf.d/default.conf
 
 CMD ["nginx", "-g", "daemon off;"]
 
