--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.3'
 services:
 
   frontend-web:
-    image: registry.gitlab.com/travel-nation/power-stack/frontend/web:v${VERSION}
+    image: registry.gitlab.com/travel-nation/power-stack/frontend/web:dev
     entrypoint:
       - sh
       - -c
@@ -18,7 +18,7 @@ services:
       - backend-web
 
   backend-web:
-    image: registry.gitlab.com/travel-nation/power-stack/backend/web:v${VERSION}
+    image: registry.gitlab.com/travel-nation/power-stack/backend/web:dev
     env_file:
       - ../../.env
     volumes:
@@ -34,7 +34,7 @@ services:
       - "${API_HOST}:127.0.0.1"
 
   backend-php:
-    image: registry.gitlab.com/travel-nation/power-stack/backend/php:v${VERSION}
+    image: registry.gitlab.com/travel-nation/power-stack/backend/php:dev
     env_file:
       - ../../.env
     entrypoint:
@@ -42,7 +42,7 @@ services:
       - -c
       - "composer -n install -vvv && php-fpm"
     ports:
-      - "9000:9000"
+      - "9000"
     volumes:
       - web_code:/var/www/
       - web_files:/var/www/web/sites/default/files/
