--- a/docker/backend-web/Dockerfile
+++ b/docker/backend-web/Dockerfile
@@ -1,4 +1,7 @@
 ARG NGINX_VER=1.15
+
+FROM registry.gitlab.com/travel-nation/power-stack/backend/web:dev as php
+
 FROM nginx:${NGINX_VER}-alpine
 
 ARG API_HOST=api.localhost
@@ -10,6 +13,8 @@ RUN apk add --no-cache gettext
 
 # Copy across any custom php.ini files
 COPY ./infrastructure/configuration/nginx/ /etc/nginx/conf.d/
+
+COPY --from=php /var/www/ /var/www/
 
 RUN envsubst '$${HOST},$${API_HOST}, $${ENV}' < /etc/nginx/conf.d/backend-site.conf.template > /etc/nginx/conf.d/default.conf
 
