Updating registry in dockerfile for nginx

--- a/docker/backend-web/Dockerfile
+++ b/docker/backend-web/Dockerfile
@@ -1,11 +1,13 @@
 ARG NGINX_VER=1.15
 
-FROM registry.gitlab.com/travel-nation/power-stack/backend/web:dev as php
+FROM registry.gitlab.com/travel-nation/power-stack/backend/php:dev AS php
 
 FROM nginx:${NGINX_VER}-alpine
 
 ARG API_HOST=api.localhost
 ARG ENV=local
+
+COPY --from=php /var/www /var/www
 
 # install the packages we need
 RUN apk add --no-cache gettext
@@ -14,8 +16,6 @@ RUN apk add --no-cache gettext
 COPY ./infrastructure/configuration/nginx/ /etc/nginx/conf.d/
 
 RUN envsubst '$${HOST},$${API_HOST}, $${ENV}' < /etc/nginx/conf.d/backend-site.conf.template > /etc/nginx/conf.d/default.conf
-
-COPY --from=php /var/www/ /var/www/
 
 CMD ["nginx", "-g", "daemon off;"]
 
