--- a/kubernetes/templates/backend-web-env-configmap.yaml
+++ b/kubernetes/templates/backend-web-env-configmap.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  API_HOST: content-hub.localhost
+  API_HOST: localhost
   ENV: local
   HOST: localhost
   NGINX_VER: "1.15"
