--- a/kubernetes/templates/frontend-web-deployment.yaml
+++ b/kubernetes/templates/frontend-web-deployment.yaml
@@ -18,11 +18,7 @@ spec:
         io.kompose.service: frontend-web
     spec:
       containers:
-      - command:
-        - sh
-        - -c
-        - gatsby build && nginx -g 'daemon off;'
-        env:
+      - env:
         - name: API_HOST
           valueFrom:
             configMapKeyRef:
