--- a/docker/backend-web/Dockerfile
+++ b/docker/backend-web/Dockerfile
@@ -19,4 +19,4 @@ WORKDIR /var/www/web
 
 EXPOSE 80 443
 
-CMD ["envsubst ", "'$${HOST},$${API_HOST}, $${ENV}' < /etc/nginx/conf.d/backend-site.conf.template > /etc/nginx/conf.d/default.conf", "nginx", "-g", "daemon off;"]
+CMD ["nginx", "-g", "daemon off;"]
