--- a/kubernetes/templates/backend-web-deployment.yaml
+++ b/kubernetes/templates/backend-web-deployment.yaml
@@ -1,12 +1,8 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  annotations:
-    kompose.cmd: kompose convert -f ../docker-compose/docker-compose.yml -c
-    kompose.version: 1.17.0 (a74acad)
-  creationTimestamp: null
   labels:
-    io.kompose.service: backend-web
+    app: backend-web
   name: backend-web
 spec:
   replicas: 1
@@ -16,7 +12,7 @@ spec:
     metadata:
       creationTimestamp: null
       labels:
-        io.kompose.service: backend-web
+        app: backend-web
     spec:
       containers:
       - env:
@@ -82,6 +78,8 @@ spec:
               name: backend-web-env
         image: registry.gitlab.com/travel-nation/power-stack/backend/web:latest
         name: backend-web
+        command: ["/bin/sh"]
+        args: ["-c","envsubst '${HOST},${API_HOST},${ENV}' < /etc/nginx/conf.d/backend-site.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"]
         ports:
         - containerPort: 80
         - containerPort: 443
