Updatign the deployment settings for k8s

--- a/kubernetes/templates/backend-caching-deployment.yaml
+++ b/kubernetes/templates/backend-caching-deployment.yaml
@@ -19,6 +19,8 @@ spec:
     spec:
       containers:
       - image: redis:latest
+        nodeSelector:
+          cloud.google.com/gke-nodepool: pool-1
         name: backend-caching
         resources: {}
       restartPolicy: Always
