--- a/kubernetes/templates/backend-web-deployment.yaml
+++ b/kubernetes/templates/backend-web-deployment.yaml
@@ -76,8 +76,10 @@ spec:
             configMapKeyRef:
               key: VERSION
               name: backend-web-env
-        image: registry.gitlab.com/travel-nation/power-stack/backend/web:latest
+        image: registry.gitlab.com/travel-nation/power-stack/backend/web:dev
         name: backend-web
+        nodeSelector:
+          cloud.google.com/gke-nodepool: pool-1
         command: ["/bin/sh"]
         args: ["-c","envsubst '${HOST},${API_HOST},${ENV}' < /etc/nginx/conf.d/backend-site.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"]
         ports:
@@ -86,10 +88,10 @@ spec:
         resources: {}
         volumeMounts:
         - mountPath: /var/www/web/sites/default/files/
-          name: web-files
+          name: web-files-2
       restartPolicy: Always
       volumes:
-      - name: web-files
+      - name: web-files-2
         persistentVolumeClaim:
           claimName: web-files
 status: {}
