--- a/kubernetes/templates/backend-caching-deployment.yaml
+++ b/kubernetes/templates/backend-caching-deployment.yaml
@@ -7,7 +7,7 @@ metadata:
   creationTimestamp: null
   labels:
     io.kompose.service: backend-caching
-  name: backend-caching
+  name: backend-caching-{{ .Release.Name }}
 spec:
   replicas: 1
   strategy: {}
@@ -21,7 +21,7 @@ spec:
       - image: redis:latest
         nodeSelector:
           cloud.google.com/gke-nodepool: pool-1
-        name: backend-caching
+        name: backend-caching-{{ .Release.Name }}
         resources: {}
       restartPolicy: Always
 status: {}
