--- a/kubernetes/templates/backend-db-service.yaml
+++ b/kubernetes/templates/backend-db-service.yaml
@@ -6,14 +6,14 @@ metadata:
     kompose.version: 1.17.0 (a74acad)
   creationTimestamp: null
   labels:
-    app: backend-db
-  name: backend-db
+    app: backend-db-{{ .Release.Name }}
+  name: backend-db-{{ .Release.Name }}
 spec:
   ports:
   - name: "5432"
     port: 5432
     targetPort: 5432
   selector:
-    app: backend-db
+    app: backend-db-{{ .Release.Name }}
 status:
   loadBalancer: {}
