--- a/kubernetes/templates/backend-php-env-configmap.yaml
+++ b/kubernetes/templates/backend-php-env-configmap.yaml
@@ -16,5 +16,5 @@ kind: ConfigMap
 metadata:
   creationTimestamp: null
   labels:
-    app: backend-php-env
-  name: backend-php-env
+    app: backend-php-env-{{ .Release.Name }}
+  name: backend-php-env-{{ .Release.Name}}
