--- a/kubernetes/templates/db-data-persistentvolumeclaim.yaml
+++ b/kubernetes/templates/db-data-persistentvolumeclaim.yaml
@@ -3,8 +3,8 @@ kind: PersistentVolumeClaim
 metadata:
   creationTimestamp: null
   labels:
-    io.kompose.service: db-data
-  name: db-data
+    io.kompose.service: db-data-{{ .Release.Name }}
+  name: db-data-{{ .Release.Name }}
 spec:
   accessModes:
   - ReadWriteOnce
