--- a/kubernetes/templates/nfs-server.yaml
+++ b/kubernetes/templates/nfs-server.yaml
@@ -1,19 +1,20 @@
+{{ if .Values.GKE }}
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: nfs-server
+  name: nfs-server-{{ .Release.Name }}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      role: nfs-server
+      role: nfs-server-{{ .Release.Name }}
   template:
     metadata:
       labels:
-        role: nfs-server
+        role: nfs-server-{{ .Release.Name }}
     spec:
       containers:
-      - name: nfs-server
+      - name: nfs-server-{{ .Release.Name }}
         image: gcr.io/google_containers/volume-nfs:0.8
         ports:
           - name: nfs
@@ -29,6 +30,28 @@ spec:
             name: mypvc
       volumes:
         - name: mypvc
-          gcePersistentDisk:
-            pdName: gce-nfs-disk
+          persistentVolumeClaim:
+            claimName: regional-pvc-{{ .Release.Name }}
             fsType: ext4
+---
+kind: StorageClass
+apiVersion: storage.k8s.io/v1
+metadata:
+  name: regionalpd-storageclass-{{ .Release.Name }}
+provisioner: kubernetes.io/gce-pd
+parameters:
+  type: pd-standard
+  zones: europe-west2-a
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: regional-pvc-{{ .Release.Name }}
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 200Gi
+  storageClassName: regionalpd-storageclass-{{ .Release.Name }}
+{{ end }}
