--- a/kubernetes/templates/backend-web-deployment.yaml
+++ b/kubernetes/templates/backend-web-deployment.yaml
@@ -89,7 +89,7 @@ spec:
           cloud.google.com/gke-nodepool: pool-1
         {{ end }}
         command: ["/bin/sh"]
-        args: ["-c","envsubst '${HOST},${API_HOST},${ENV}' < /etc/nginx/conf.d/backend-site.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"]
+        args: ["-c","envsubst '${HOST},${API_HOST},${ENV},${PHP_HOST}' < /etc/nginx/conf.d/backend-site.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"]
         ports:
         - containerPort: 80
         - containerPort: 443
